# University

./: 4ºAno
1º Ano/LI2/: README.md
1º Ano/LI2/reversi/: CMakeLists.txt  estado.c  estado.h  main.c
2º Ano/: readme.md
2º Ano/LI3/ProjetoC/: makefile  prog  readme.md
2º Ano/LI3/ProjetoC/include/: cliente.h  controller.h  copia.h  faturacao.h  gestaoFilial.h  interface.h  produto.h  view.h
2º Ano/LI3/ProjetoC/libs/: copia.c
2º Ano/LI3/ProjetoC/src/: cliente.c  controller.c  faturacao.c  gestaoFilial.c  main.c  produto.c  sgv.c  view.c
2º Ano/LI3/ProjetoJava/: readme.md
2º Ano/POO/TrazAqui!/: GestaoCliente.ctxt  LogsGerados.txt  package.bluej
2º Ano/SO/: README.md  argus.c  argus.h  argusd.c  executaTarefa.c  header.h  makefile
3º Ano/: readme.md
3º Ano/BD/: -- MySQL Workbench Forward Engineering  AulaPraticaFicha6.txt  Conceitual_1.brM3  Conceitual_Aula6.brM3  Lógico_1.brM3  Lógico_Aula6.brM3  Povoamento.sql  bd.brM3  bd.mwb  bd.mwb.bak  bd1.brM3  modelo_fe.sql  pratica4.brM3  queries.sql  teste.mwb
3º Ano/CC/: README.md
3º Ano/CC/CC TP2/: AESencrp.java  AnonGW_Worker.java  UDPtemp.java  UDPworker.java  anonGW.java
3º Ano/CG/: readme.md
3º Ano/CG/FASE1/: CMakeLists.txt  README.md  relatorio_fase1.docx
3º Ano/CG/FASE1/include/: engine.h
3º Ano/CG/FASE1/models/: cone.3d  sphere.3d
3º Ano/CG/FASE1/scenes/: plane.xml  sphere.xml
3º Ano/CG/FASE1/src/: engine.c++
3º Ano/CG/FASE2/: CMakeLists.txt
3º Ano/CG/FASE2/include/: Desenhar.cpp  Desenhar.h  Escala.cpp  Ponto.h  Push.h  Rotacao.cpp  Rotacao.h  Translacao.cpp  Translacao.h  engine.h
3º Ano/CG/FASE2/scenes/: cone.xml
3º Ano/CG/FASE2/src/: engine.c++  generator.c++
3º Ano/CG/FASE3/: CMakeLists.txt
3º Ano/CG/FASE3/include/: Desenhar.cpp  Desenhar.h  Ponto.cpp  Pop.cpp  Pop.h  Push.cpp  Rotacao.cpp  Translacao.h  engine.h
3º Ano/CG/FASE3/models/: boxdiv2.3d  sphere.3d
3º Ano/CG/FASE3/scenes/: SistemaSolar.xml  box.xml  teste1.xml  truques.xml
3º Ano/CG/FASE3/src/: engine.c++  generator.c++
3º Ano/CG/FASE4/: CMakeLists.txt
3º Ano/CG/FASE4/include/: Cor.cpp  Cor.h  Desenhar.cpp  Luz.h  (+9 more)
3º Ano/SRCR/: Ficha 05.aula.pl  Ficha27.pl  Ficha27.txt  Ficha4.pl  Trabalho1.pl  ficha10.pl  ficha11.pl  ficha12.pl  ficha6.pl  ficha7.pl  ficha8.pl  ficha9.pl
3º Ano/SRCR/SRCR-A86617/: trabalho.pl  trabalho1.pl
4ºAno/: readme.md
4ºAno/EM/: ClassromFOL  ClassromRL  FirstExampleWorkers.ele  Ring_protocol.ele  SimpleAllocator.ele  TrashFOL  TwoPhase.ele  readme.md
4ºAno/GR/: readme.md
4ºAno/GR/TP2/: AlarmsLogger  ManagerLogger  logger  pom.xml  readme.md
4ºAno/GR/TP3/: readme.md
4ºAno/IATA/TaMtAlto/: pom.xml
(+63 files in other folders)
